# dailycrm

./: .gitignore  Caddyfile  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yaml
Backend/: Cargo.toml  Dockerfile
Backend/migrations/: 20260521221854_create_stages_table.sql  20260522190000_add_project_updated_at.sql  20260522200000_add_stage_completed.sql  20260522211351_fix_stage_touch_project_function.sql  20260523000000_create_invites_table.sql  20260523000001_timestamp_to_timestamptz.sql  20260523000002_invite_cleanup_trigger.sql  20260523100000_create_attachments_table.sql  20260524000000_stages_pkey_deferrable.sql  20260525000000_create_refresh_tokens_table.sql  20260525000001_drop_attachment_object_key.sql  20260530000000_add_user_email_notifications.sql  20260531000000_add_roles_and_stage_completion.sql  20260601000000_multiple_acts.sql  20260601000001_drop_stage_description.sql  20260601000002_stages_pkey_not_deferrable.sql  20260601000003_create_stage_comments.sql  20260601000004_attachments_fk_stages.sql  20260601000005_add_is_system_to_comments.sql  20260604000000_sub_stages.sql  20260604000001_add_list_indexes.sql  20260605000000_stage_fk_on_update_cascade.sql  20260608000000_stage_completion_view.sql  20260622000000_split_cost_into_advance_and_final.sql  20260622000001_comment_touches_project.sql  20260622000002_advance_confirmation_optional.sql  20260623000000_cascade_delete_stages_on_project_delete.sql  20260626000000_add_is_pinned_to_comments.sql
Backend/src/: auth.rs  cors.rs  db.rs  jwt.rs  mail.rs  main.rs  routes.rs  state.rs  storage.rs
Backend/src/contract/: attachments.rs  deadlines.rs  details.rs  invites.rs  mod.rs  projects.rs  protected.rs  refresh_tokens.rs  stage_fields.rs  stages.rs  sting_contentable.rs  task.rs  users.rs
Backend/src/endpoint/: api_error.rs  auth_header.rs  mod.rs
Backend/src/middleware/: jwt_middleware.rs  jwt_middleware_service.rs  login_governor.rs  mod.rs
Backend/src/model/: access_token.rs  attachment.rs  attachment_link.rs  attachments.rs  authorized_user.rs  deadlines.rs  hash.rs  hash_verification.rs  hashed_password.rs  invites.rs  mod.rs  new_attachment.rs  password.rs  password_hash.rs  positioned_stage.rs  project.rs  project_link.rs  projects.rs  refresh_token.rs  refresh_tokens.rs  stage.rs  stage_completed.rs  stage_cost.rs  stage_deadline.rs  stage_description.rs  stage_link.rs  stage_title.rs  stages.rs  tail_stage.rs  user.rs  user_link.rs  username.rs  users.rs  (+2 more)
(+358 files in other folders)
