[package]
name = "CRM"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0-alpha.1", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
dotenvy = "0.15.7"