[package]
name = "CRM"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0-alpha.1", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
bcrypt = "0.19.1"
serde_json = "1"
aws-sdk-s3 = "1"
actix-multipart = "0.7"
actix-governor = "0.10.0"
futures-util = "0.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
infer = "0.19.0"
async-trait = "0.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }